# miniPascal_Compiler

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  advisor.c  cmake_install.cmake  main  qsort.pas  record.pas.ll  run.sh  run_demo.sh  test.pas  test.pas.ll
src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  debug  main.cpp  pascal.l.cpp  pascal.y.cpp  pascal.y.hpp  test.ll  test.sh
src/ast/: AST.cpp  AST.hpp  AST_BaseNode.hpp  AST_Expression.hpp  AST_Program.hpp  AST_Statement.hpp  AST_Type.hpp  AST_Value.hpp  AST_Viz.cpp  ClassList.txt
src/contents/: Contents.cpp  Contents.hpp
src/generate/: Generator.hpp
src/generator/: generator.cpp  generator_error_check.cpp  generator_error_check.hpp  generator_statement.cpp
src/lexer/: pascal.h  pascal.l
src/parser/: pascal.y  readme.md
src/type/: type.cpp  type.hpp
src/visualization/: graph_visual.cpp  graph_visual.hpp
test/: advisor.pas  advisor.pas.dot  advisor_input.txt  arraymul.pas  arraymul.pas.dot  break.pas  declfunc.pas  for.pas  hello.pas  ifstmt.pas  matrix.pas  newline.pas  qsort  record.pas  test.pas  test2.pas  typearray.pas  typerecord.pas  varrecord.pas  whilestmt.pas
test/auto-advisor/: README.md  advisor  darwin-amd64  darwin-arm64
test/matrix-multiplication/: darwin-amd64  darwin-arm64  matrix
test/quicksort/: darwin-amd64  darwin-arm64  qsort
